[gd_scene load_steps=12 format=2]

[ext_resource path="res://Action RPG/Action RPG Resources/Player/PlayerV5/PlayerV5.tscn" type="PackedScene" id=1]
[ext_resource path="res://Action RPG/Action RPG Resources/Shaders/Lights/LampV3.tscn" type="PackedScene" id=2]
[ext_resource path="res://Action RPG/Action RPG Resources/Levels/WorldV5/Background.png" type="Texture" id=3]
[ext_resource path="res://Action RPG/Action RPG Resources/World/ShadowAttacker.tscn" type="PackedScene" id=4]
[ext_resource path="res://Action RPG/Action RPG Resources/Shaders/Lights/LampV2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Action RPG/Action RPG Resources/Levels/WorldV6/YSort.gd" type="Script" id=6]
[ext_resource path="res://Action RPG/Action RPG Resources/Levels/WorldV6/ScaryMonsterSounds.mp3" type="AudioStream" id=7]
[ext_resource path="res://Action RPG/Action RPG Resources/Levels/WorldV6/Click1.mp3" type="AudioStream" id=8]
[ext_resource path="res://Action RPG/Action RPG Resources/UI/fill.png" type="Texture" id=9]
[ext_resource path="res://Action RPG/Action RPG Resources/UI/bg.png" type="Texture" id=10]

[sub_resource type="Environment" id=1]
background_mode = 4
background_energy = 10.14
tonemap_mode = 3
tonemap_exposure = 0.43
auto_exposure_min_luma = 0.0
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/3 = false
glow_intensity = 0.0
glow_strength = 0.69
glow_blend_mode = 0
glow_hdr_threshold = 1.5
glow_hdr_luminance_cap = 2.0

[node name="WorldV6" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 160.0
margin_bottom = 90.0
color = Color( 0.0705882, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 81, 45 )
scale = Vector2( 0.625, 0.625 )
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="Background"]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Background/StaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 32, 72, -16, 72, -16, 56, -80, 56, -80, 24, -96, 24, -96, -24, -80, -24, -80, -40, -54.4, -40, -54.4, -41.6, -43.2, -41.6, -41.6, -41.6, -41.6, -40, -1.60001, -40, -1.52588e-05, -78.4, -129.6, -78.4, -129.6, 72, -32, 72 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Background/StaticBody2D"]
position = Vector2( -1.52588e-05, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )
build_mode = 1
polygon = PoolVector2Array( 32, 72, -16, 72, -16, 56, -80, 56, -80, 24, -96, 24, -96, -24, -80, -24, -80, -40, -54.4, -40, -54.4, -41.6, -43.2, -41.6, -41.6, -41.6, -41.6, -40, 0, -40, 0, -78.4, -129.6, -78.4, -129.6, 72, -32, 72 )

[node name="YSort" type="YSort" parent="."]
script = ExtResource( 6 )

[node name="PlayerV5" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 48, 41 )
__meta__ = {
"_edit_group_": true
}

[node name="ShadowAttacker" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( -29, -42 )

[node name="RedLamp" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 80, -1 )

[node name="Lamp" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 37, 75 )

[node name="Lamp2" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 53, 76 )

[node name="RechargeFlashBar" type="TextureProgress" parent="YSort"]
visible = false
margin_left = 66.0
margin_top = 28.0
margin_right = 314.0
margin_bottom = 68.0
rect_rotation = 270.0
rect_scale = Vector2( 0.1, 0.1 )
step = 0.01
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 9 )

[node name="SoundPlayer" type="AudioStreamPlayer" parent="YSort"]
stream = ExtResource( 7 )

[node name="Ambiance" type="AudioStreamPlayer2D" parent="YSort"]
stream = ExtResource( 8 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.0470588, 0.0588235, 0.0666667, 1 )
__meta__ = {
"_edit_lock_": true
}
